status and list work. some other minor changes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hyfaebot",
   "version": "1.0.0",
-  "main": "./src/bot.js",
+  "main": "./src/hyfae.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.1",
+    "minecraft-server-util": "^3.1.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
