--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "minecraft-server-util": "^3.1.0",
+    "mojang-api": "0.0.2",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
