--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "minecraft-server-util": "^3.1.0",
     "mojang-api": "0.0.2",
     "node-fetch": "^2.6.1",
+    "quick.db": "^7.1.3",
     "youtube-sr": "^2.0.4",
     "ytdl-core": "^4.1.2"
   },
