moved from hyfae to darkstone

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hyfaebot",
+  "name": "darkstnebot",
   "version": "1.0.0",
-  "main": "./src/hyfae.js",
+  "main": "./src/stoner.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
